# qms

./: .gitignore  README.md
LCDWEMOS/: LCDWEMOS.ino
MQTT/: Heartrate.ino  accelerometer.ino
MQTT/accelerometer/: accelerometer.ino
Signal Strength ESP32 BLE/ESP32_Client_Sig/: ESP32_Client_Sig.ino
backend/: .gitignore  Cargo.toml
backend/migrations/: 20241123135550_create_table_patients.sql  20241126112914_create_table_patients.sql  20241126112925_create_table_appointments.sql  20241225151222_create_table_patients.sql  20241226024024_create_table_appointments.sql  20241231013809_add_table_ble_beacons.sql  20241231013830_add_table_wearables.sql  20250106090448_insert_beacons.sql  20250114141943_insert_dummy_patients.sql
backend/src/: error.rs  errors.rs  handlers.rs  main.rs  models.rs  queue.rs  routes.rs  states.rs  test.rs
backend/src/handlers/: appointments.rs  beacons.rs  mod.rs  patients.rs  queues.rs  wearables.rs
backend/src/models/: appointments.rs  beacons.rs  mod.rs  patients.rs  queues.rs  wearables.rs
backend/src/routes/: appointment.rs  auth.rs  beacons.rs  mod.rs  queue.rs  wearables.rs
circuit/qms_kiosk/: fp-lib-table  qms_kiosk.kicad_pcb  qms_kiosk.kicad_prl  qms_kiosk.kicad_pro  qms_kiosk.kicad_sch  sym-lib-table
circuit/qms_wearables/: #auto_saved_files#  fp-lib-table  qms_wearables.kicad_pcb  qms_wearables.kicad_prl  qms_wearables.kicad_pro  qms_wearables.kicad_sch  sym-lib-table  ~qms_wearables.kicad_sch.lck
docs/: .$block_diagram.drawio.bkp  block_diagram.drawio
firmware/qms_kiosk/: ESP32_Cam_QR_Code_Scanner_Stream_Web_Server_QMS.ino
firmware/qms_wearables/: ESP32_Server_Sig.ino  Wearables_QMS.ino
frontend/: .gitignore  README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
hospital_ui/: README.md  pubspec.yaml
hospital_ui/lib/: main.dart
hospital_ui/linux/: CMakeLists.txt  (+1 more)
mqtt/: Cargo.toml
(+98 files in other folders)
