[package]
name = "qms-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
priority-queue = { version = "2.1.1", features = ["serde"] }
rumqttc = "0.24.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["sqlite", "chrono", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "catch-panic"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
